- Fixed: Pseudoackground sizing and alignment - Fixed: Pseudobackground opacity being showed on other tabs where findbar is not enabled

--- a/NeoZen/Features/BetterFindbar/BetterFindbar-Background.css
+++ b/NeoZen/Features/BetterFindbar/BetterFindbar-Background.css
@@ -6,17 +6,18 @@
             content: "" !important;
             background-color: light-dark(rgba(255, 255, 255, 1), rgba(40, 40, 40, 1)) !important;
 
-            width: 90px;
+            width: 92px;
+            flex: 1 1 70% !important; /* Allows them to grow/shrink evenly */
             align-self: center !important;
-            opacity: 1;
+            opacity: 0;
             margin-top: 0px !important;
             margin-bottom: 0px !important;
-            margin-right: calc(var(--zen-element-separation) + 2px);
-            height: 28px !important;
+            margin-right: calc(var(--zen-element-separation) - 1px);
+            height: 26px !important;
             top: auto !important;
-            bottom: calc(var(--zen-element-separation) + 8px) !important;
+            bottom: calc(var(--zen-element-separation) + 10px) !important;
 
-            border-radius: var(--Neo-Border-Radius);
+            border-radius: 30px;
             visibility: visible !important;
             transition: opacity 0.0s ease, bottom 0.5s ease, width 0.5s ease, height 0.5s ease !important;
         }
@@ -32,17 +33,17 @@
             #zen-appcontent-wrapper::before {
                 opacity: 1 !important;
                 border-radius: 30px;
-                width: 92px;
+                width: 90px;
             }
         }
 
         :has(.browserSidebarContainer.deck-selected > .browserContainer > findbar:not([hidden="true"]):hover) {
             #zen-appcontent-wrapper::before {
-                width: calc(70% - var(--zen-element-separation) * 2) !important;
                 opacity: 1 !important;
                 bottom: calc(var(--zen-element-separation) + 10px) !important;
                 height: 75px !important;
                 border-radius: var(--Neo-Border-Radius);
+                width: calc(70% - var(--zen-element-separation) * 1) !important;
             }
         }
     }
@@ -78,4 +79,9 @@
             }
         }
     }
+}
+
+/* Fix the sizing of the pseudobackground */
+#zen-appcontent-wrapper{
+     position: relative !important;
 }
